--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">teamSns</string>
+    <string name="detail_activity_edit">편집</string>
+    <string name="detail_activity_logout">로그아웃</string>
 </resources>
