--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">teamSns</string>
     <string name="detail_activity_edit">편집</string>
     <string name="detail_activity_logout">로그아웃</string>
+    <string name="edit_name">이름</string>
+    <string name="edit_name_empty">이름을 입력하세요</string>
+    <string name="edit_status">상태</string>
+    <string name="edit_status_message">상태메세지를 입력하세요</string>
 </resources>
