상단바 상태표시

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="edit_status">상태</string>
     <string name="edit_status_message">상태메세지를 입력하세요</string>
     <string name="detail_activity_detail">Detail</string>
+    <string name="detail_activity_my_page">My Page</string>
 </resources>
