--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="detail_activity_detail">Detail</string>
     <string name="detail_activity_my_page">My Page</string>
     <string name="show_more">..더보기</string>
+    <string name="show_close">접기</string>
 </resources>
