--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,7 @@
     <string name="incorrect_login_info">"아이디/비밀번호가 옳지 않습니다.."</string>
 
     <!-- edit text 입력 값 적절한지 유효성 처리 -->
-    <string name="name_error_message">"영문이름만 가능"</string>
+    <string name="name_error_message">"한국 이름만 가능"</string>
     <string name="id_error_message">"아이디는 영문과 숫자로 구성됩니다."</string>
     <string name="password_error_message">"비밀번호는 영대소문자/숫자/특수문자 포함해야 하고 최소 8글자여야합니다."</string>
     <string name="password_check_error_message">"비밀번호가 일치하지 않습니다."</string>
