--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,7 @@
     <string name="app_name">별개냥</string>
     <string name="hello_word">안녕하세요 %s 님 </string>
     <string name="detail_activity_edit">편집</string>
+    <string name="detail_activity_login">로그인</string>
     <string name="detail_activity_logout">로그아웃</string>
     <string name="edit_name">이름</string>
     <string name="edit_name_empty">이름을 입력하세요</string>
@@ -33,4 +34,5 @@
     <string name="password">"비밀번호"</string>
     <string name="check_password">"비밀번호 확인"</string>
     <string name="next">"다음"</string>
+    <string name="signin_activity_signin">회원가입</string>
 </resources>
