--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -36,4 +36,5 @@
     <string name="password">Password</string>
     <string name="check_password">Check Password</string>
     <string name="next">Next</string>
+    <string name="signin_activity_signin">Sign In</string>
 </resources>
