--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -37,4 +37,5 @@
     <string name="check_password">Check Password</string>
     <string name="next">Next</string>
     <string name="signin_activity_signin">Sign In</string>
+    <string name="choose_profile_img">Choose Profile Image!!</string>
 </resources>
