--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,5 @@
     <string name="check_password">"비밀번호 확인"</string>
     <string name="next">"다음"</string>
     <string name="signin_activity_signin">회원가입</string>
+    <string name="choose_profile_img">프로필을 골라주세요!!</string>
 </resources>
