--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -38,4 +38,5 @@
     <string name="next">Next</string>
     <string name="signin_activity_signin">Sign In</string>
     <string name="choose_profile_img">Choose Profile Image!!</string>
+    <string name="post_empty_comment">write comment.</string>
 </resources>
