--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,4 +36,5 @@
     <string name="next">"다음"</string>
     <string name="signin_activity_signin">회원가입</string>
     <string name="choose_profile_img">프로필을 골라주세요!!</string>
+    <string name="post_empty_comment">댓글을 작성하세요.</string>
 </resources>
